--- a/views/logout.html
+++ b/views/logout.html
@@ -64,7 +64,7 @@
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
 										<li>
-											<a href="/register">Buy</a>
+											<a href="/support">Support</a>
 										</li>
 										<li>
 											<a href="/login">Login</a>
@@ -135,30 +135,7 @@
 		</div>
 	</footer>
 </div>
-<script type="text/javascript">
-
-	$(document).ready(function() {
-		$('#eofbot').on('load', function(){
-			var wavy = $(this).contents().find("#wavy");
-			var eofbot = $('#eofbot');
-			$(this).contents().find("#wavy").on('click', function(event) {
-				available = eofbot.contents().find(".botname span", eofbot);
-				console.log(available)
-				function toggleText() {
-					if (available[0].innerHTML === "available") {
-						available[0].innerHTML = "Chatting";
-					} else {
-						available[0].innerHTML = "available";
-					}
-				}
-				$('#eofbot').toggleClass('active');
-				toggleText();
-			});
-		});
-	});
-
-</script>
-
+<script type="text/javascript" src="/scripts/botframe.js"></script>
 <script type="text/javascript" src="/scripts/custom_menu.js"></script>
 
 </body>
