--- a/views/about.html
+++ b/views/about.html
@@ -63,32 +63,30 @@
 						<nav id="mainmenu">
 							<ul>
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
-									<li><a href="/home">Home</a></li>
+								  <li><a href="/home">Home</a></li>
 									<li><a href="/blog">News</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
-										<li>
-											<a href="/register">Buy</a>
-										</li>
-										<li>
-											<a href="/login">Login</a>
-										</li>
+										<li><a href="/support">Support</a></li>
+										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
 										<li><a href="/service_request">Service Request</a></li>
 									<% } %>
-									<li><a href="/about">E-Office</a></li>
+								  <li><a href="/about">E-Office</a></li>
 									<li><a href="/terms">Terms & Conditions</a></li>
 								<% } else if (lang == 'nl') { %>
-									<li><a href="/home">Home</a></li>
+								  <li><a href="/home">Home</a></li>
 									<li><a href="/blog">Nieuws</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
+										<li><a href="/support">Ondersteuning</a></li>
 										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
+										<li><a href="/service_request">Service Request</a></li>
 									<% } %>
-									<li><a href="/about">E-Office</a></li>
+								  <li><a href="/about">E-Office</a></li>
 									<li><a href="/terms">Algemene voorwaarde</a></li>
 								<% } %>
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
@@ -103,7 +101,7 @@
 								<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
 							<% } %>
 							<% if (!username) { %>
-								<a id="loginButton" href="/login">Login</a>
+								<!-- <a id="loginButton" href="/login">Login</a> -->
 							<% } %>
 						</div>
 					</div>
@@ -185,25 +183,8 @@
 				zoom: 1
 			});
 	}
-
-	$('#eofbot').on('load', function(){
-		var wavy = $(this).contents().find("#wavy");
-		var eofbot = $('#eofbot');
-		$(this).contents().find("#wavy").on('click', function(event) {
-			available = eofbot.contents().find(".botname span", eofbot);
-			console.log(available)
-			function toggleText() {
-				if (available[0].innerHTML === "available") {
-					available[0].innerHTML = "Chatting";
-				} else {
-					available[0].innerHTML = "available";
-				}
-			}
-			$('#eofbot').toggleClass('active');
-			toggleText();
-		});
-	});
 </script>
+<script type="text/javascript" src="/scripts/botframe.js"></script>
 <script src="./lib/domJSON.js"></script>
 <!-- <script type="text/javascript" src="/scripts/admin_cm.js"></script> -->
 <script type="text/javascript" src="/scripts/admin_cm_copy.js"></script>
