--- a/views/content.html
+++ b/views/content.html
@@ -68,24 +68,47 @@
 						<nav id="mainmenu">
 							<ul>
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
-									<li><a href="/home">Home</a></li>
-									<li><a href="/register">Register</a></li>
-									<li><a href="/downloads">Downloads</a></li>
-									<li><a href="/news">News</a></li>
+								  <li><a href="/home">Home</a></li>
+									<li><a href="/blog">News</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
+									<% if (!username) { %>
+										<li><a href="/support">Support</a></li>
+										<li><a href="/login">Login</a></li>
+									<% } else if (username) { %>
+										<li><a href="/downloads">Downloads</a></li>
+										<li><a href="/service_request">Service Request</a></li>
+									<% } %>
+								  <li><a href="/about">E-Office</a></li>
+									<li><a href="/terms">Terms & Conditions</a></li>
 								<% } else if (lang == 'nl') { %>
-									<li><a href="/home">Home</a></li>
-									<li><a href="/register">Registreer</a></li>
-									<li><a href="/downloads">Downloads</a></li>
-									<li><a href="/news">Nieuws</a></li>
+								  <li><a href="/home">Home</a></li>
+									<li><a href="/blog">Nieuws</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
+									<% if (!username) { %>
+										<li><a href="/support">Ondersteuning</a></li>
+										<li><a href="/login">Login</a></li>
+									<% } else if (username) { %>
+										<li><a href="/downloads">Downloads</a></li>
+										<li><a href="/service_request">Service Request</a></li>
+									<% } %>
+								  <li><a href="/about">E-Office</a></li>
+									<li><a href="/terms">Algemene voorwaarde</a></li>
 								<% } %>
-
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
-									<li class="lang"><a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
+									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
 								<% } else if (lang == 'nl') { %>
-									<li class="lang"><a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
+									<li class="lang"><a href="?clang=en"><img src="images/en.png" title="Vertaal naar: Engels" alt="British flag" height="34" width="34"></a></li>
 								<% } %>
 							</ul>
 						</nav>
+						<div class="login">
+							<% if (username) { %>
+								<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
+							<% } %>
+							<% if (!username) { %>
+								<!-- <a id="loginButton" href="/login">Login</a> -->
+							<% } %>
+						</div>
 					</div>
 				</div>
 			</div>
