--- a/views/index.html
+++ b/views/index.html
@@ -63,32 +63,30 @@
 				<nav id="mainmenu">
 					<ul>
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
-						  <li><a href="/home">Home</a></li>
+							<li><a href="/home">Home</a></li>
 							<li><a href="/blog">News</a></li>
 							<li><a href="/faq">F.A.Q</a></li>
 							<% if (!username) { %>
-								<li>
-									<a href="/register">Buy</a>
-								</li>
-								<li>
-									<a href="/login">Login</a>
-								</li>
+								<li><a href="/support">Support</a></li>
+								<li><a href="/login">Login</a></li>
 							<% } else if (username) { %>
 								<li><a href="/downloads">Downloads</a></li>
 								<li><a href="/service_request">Service Request</a></li>
 							<% } %>
-						  <li><a href="/about">E-Office</a></li>
+							<li><a href="/about">E-Office</a></li>
 							<li><a href="/terms">Terms & Conditions</a></li>
 						<% } else if (lang == 'nl') { %>
-						  <li><a href="/home">Home</a></li>
+							<li><a href="/home">Home</a></li>
 							<li><a href="/blog">Nieuws</a></li>
 							<li><a href="/faq">F.A.Q</a></li>
 							<% if (!username) { %>
+								<li><a href="/support">Ondersteuning</a></li>
 								<li><a href="/login">Login</a></li>
 							<% } else if (username) { %>
 								<li><a href="/downloads">Downloads</a></li>
+								<li><a href="/service_request">Service Request</a></li>
 							<% } %>
-						  <li><a href="/about">E-Office</a></li>
+							<li><a href="/about">E-Office</a></li>
 							<li><a href="/terms">Algemene voorwaarde</a></li>
 						<% } %>
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
@@ -103,7 +101,7 @@
 						<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
 					<% } %>
 					<% if (!username) { %>
-						<a id="loginButton" href="/login">Login</a>
+						<!-- <a id="loginButton" href="/login">Login</a> -->
 					<% } %>
 				</div>
 			</div>
@@ -114,7 +112,7 @@
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
-			<a href="/register" class="banner_sticker">
+			<a href="/support" class="banner_sticker">
 				Register for TalkTeam now !
 			</a>
 			<!-- <img class="bannerimg" src="images/silhoutte2.jpg"> -->
@@ -174,49 +172,35 @@
 </div>
 
 <div class="cookieWall">
-	<% if (typeof lang == 'undefined' || lang == 'en') { %>
-		<h3>We use cookies </h3>
-		<p>
-			To make your visit to our website even easier and more personal, we use cookies (and similar techniques).
-			With these cookies we and third parties can collect information about you and monitor your internet behavior within (and possibly also outside) our website.
-			With this information we and third parties adapt content or advertisements to your interests and profile.
-			In addition, cookies allow information to be shared via social media. Read more about our cookies >
-		</p>
-		<button type="button" class="agree" name="agree">I agree ›</button><button type="button" class="disagree" name="disagree">Cookie confinguration ›</button>
-	<% } else if (lang == 'nl') { %>
-		<h3>Wij maken gebruik van cookies</h3>
-		<p>
-			Om jouw bezoek aan onze website nóg makkelijk en persoonlijker te maken zetten we cookies (en daarmee vergelijkbare technieken) in.
-			Met deze cookies kunnen wij en derde partijen informatie over jou verzamelen en jouw internetgedrag binnen (en mogelijk ook buiten) onze website volgen.
-			Met deze informatie passen wij en derde partijen content of advertenties aan jouw interesses en profiel aan.
-			Daarnaast is het dankzij cookies mogelijk informatie te delen via social media. Lees meer over onze cookies ›
-		</p>
-		<button type="button" class="agree" name="agree">Ik ga akkoord ›</button><button type="button" class="disagree" name="disagree">Cookie instellingen ›</button>
-	<% } %>
+	<div class="container">
+		<div class="col-12">
+		<% if (typeof lang == 'undefined' || lang == 'en') { %>
+			<h3>We use cookies </h3>
+			<p>
+				To make your visit to our website even easier and more personal, we use cookies (and similar techniques).
+				With these cookies we and third parties can collect information about you and monitor your internet behavior within (and possibly also outside) our website.
+				With this information we and third parties adapt content or advertisements to your interests and profile.
+				In addition, cookies allow information to be shared via social media. Read more about our cookies >
+			</p>
+			<button type="button" class="agree" name="agree">I agree ›</button>
+		<% } else if (lang == 'nl') { %>
+			<h3>Wij maken gebruik van cookies</h3>
+			<p>
+				Om jouw bezoek aan onze website nóg makkelijk en persoonlijker te maken zetten we cookies (en daarmee vergelijkbare technieken) in.
+				Met deze cookies kunnen wij en derde partijen informatie over jou verzamelen en jouw internetgedrag binnen (en mogelijk ook buiten) onze website volgen.
+				Met deze informatie passen wij en derde partijen content of advertenties aan jouw interesses en profiel aan.
+				Daarnaast is het dankzij cookies mogelijk informatie te delen via social media. Lees meer over onze cookies ›
+			</p>
+			<button type="button" class="agree" name="agree">Ik ga akkoord ›</button>
+		<% } %>
+		</div>
+	</div>
 </div>
 
-<script type="text/javascript">
-	$(document).ready(function() {
-		$('#eofbot').on('load', function(){
-			var wavy = $(this).contents().find("#wavy");
-			var eofbot = $('#eofbot');
-		  $(this).contents().find("#wavy").on('click', function(event) {
-				available = eofbot.contents().find(".botname span", eofbot);
-				function toggleText() {
-					if (available[0].innerHTML === "available") {
-						available[0].innerHTML = "Chatting";
-					} else {
-						available[0].innerHTML = "available";
-					}
-				}
-				$('#eofbot').toggleClass('active');
-				toggleText();
-			});
-		});
-	});
-</script>
+
 <script src="./lib/domJSON.js"></script>
 <!-- <script type="text/javascript" src="/scripts/admin_cm.js"></script> -->
+<script type="text/javascript" src="/scripts/botframe.js"></script>
 <script type="text/javascript" src="/scripts/cookiewall.js"></script>
 <script type="text/javascript" src="/scripts/custom_menu.js"></script>
 </body>
