--- a/views/support.html
+++ b/views/support.html
@@ -63,12 +63,8 @@
 									<li><a href="/blog">News</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
-										<li>
-											<a href="/register">Buy</a>
-										</li>
-										<li>
-											<a href="/login">Login</a>
-										</li>
+										<li><a href="/support">Support</a></li>
+										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
 										<li><a href="/service_request">Service Request</a></li>
@@ -80,9 +76,11 @@
 									<li><a href="/blog">Nieuws</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
+										<li><a href="/support">Ondersteuning</a></li>
 										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
+										<li><a href="/service_request">Service Request</a></li>
 									<% } %>
 								  <li><a href="/about">E-Office</a></li>
 									<li><a href="/terms">Algemene voorwaarde</a></li>
@@ -99,7 +97,7 @@
 								<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
 							<% } %>
 							<% if (!username) { %>
-								<a id="loginButton" href="/login">Login</a>
+								<!-- <a id="loginButton" href="/login">Login</a> -->
 							<% } %>
 						</div>
 					</div>
@@ -121,10 +119,10 @@
 		<div class="col-12">
 
 			<% if (typeof lang == 'undefined' || lang == 'en') { %>
-				<h2>Register</h2>
+				<h2>Support</h2>
 				<p>Register your username and password here.</p>
 			<% } else if (lang == 'nl') { %>
-				<h2>Registreer</h2>
+				<h2>Ondersteuning</h2>
 				<p>Registreer uw gebruikersnaam en wachtwoord hier.</p>
 			<% } %>
 
@@ -196,26 +194,9 @@
 	</footer>
 
 </div>
+	<script type="text/javascript" src="/scripts/botframe.js"></script>
 	<script type="text/javascript" src="/scripts/custom_menu.js"></script>
 	<script type="text/javascript">
-	$('#eofbot').on('load', function(){
-		var wavy = $(this).contents().find("#wavy");
-		var eofbot = $('#eofbot');
-		$(this).contents().find("#wavy").on('click', function(event) {
-			available = eofbot.contents().find(".botname span", eofbot);
-			console.log(available)
-			function toggleText() {
-				if (available[0].innerHTML === "available") {
-					available[0].innerHTML = "Chatting";
-				} else {
-					available[0].innerHTML = "available";
-				}
-			}
-			$('#eofbot').toggleClass('active');
-			toggleText();
-		});
-	});
-
 	$("#regForm").submit(function(){
 	  var isValid = true;
 		$( "#regForm label + input" ).each(function() {
