--- a/views/terms.html
+++ b/views/terms.html
@@ -66,12 +66,8 @@
 									<li><a href="/blog">News</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
-										<li>
-											<a href="/register">Buy</a>
-										</li>
-										<li>
-											<a href="/login">Login</a>
-										</li>
+										<li><a href="/support">Support</a></li>
+										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
 										<li><a href="/service_request">Service Request</a></li>
@@ -83,9 +79,11 @@
 									<li><a href="/blog">Nieuws</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
+										<li><a href="/support">Ondersteuning</a></li>
 										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
+										<li><a href="/service_request">Service Request</a></li>
 									<% } %>
 								  <li><a href="/about">E-Office</a></li>
 									<li><a href="/terms">Algemene voorwaarde</a></li>
@@ -102,7 +100,7 @@
 								<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
 							<% } %>
 							<% if (!username) { %>
-								<a id="loginButton" href="/login">Login</a>
+								<!-- <a id="loginButton" href="/login">Login</a> -->
 							<% } %>
 						</div>
 					</div>
@@ -172,27 +170,7 @@
 		</div>
 	</footer>
 </div>
-<script type="text/javascript">
-	$(document).ready(function() {
-		$('#eofbot').on('load', function(){
-			var wavy = $(this).contents().find("#wavy");
-			var eofbot = $('#eofbot');
-			$(this).contents().find("#wavy").on('click', function(event) {
-				available = eofbot.contents().find(".botname span", eofbot);
-				console.log(available)
-				function toggleText() {
-					if (available[0].innerHTML === "available") {
-						available[0].innerHTML = "Chatting";
-					} else {
-						available[0].innerHTML = "available";
-					}
-				}
-				$('#eofbot').toggleClass('active');
-				toggleText();
-			});
-		});
-	});
-</script>
+<script type="text/javascript" src="/scripts/botframe.js"></script>
 <script src="./lib/domJSON.js"></script>
 <!-- <script type="text/javascript" src="/scripts/admin_cm.js"></script> -->
 <script type="text/javascript" src="/scripts/admin_cm_copy.js"></script>
