--- a/views/toc.html
+++ b/views/toc.html
@@ -63,12 +63,8 @@
 									<li><a href="/blog">News</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
-										<li>
-											<a href="/register">Buy</a>
-										</li>
-										<li>
-											<a href="/login">Login</a>
-										</li>
+										<li><a href="/support">Support</a></li>
+										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
 										<li><a href="/service_request">Service Request</a></li>
@@ -80,9 +76,11 @@
 									<li><a href="/blog">Nieuws</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
+										<li><a href="/support">Ondersteuning</a></li>
 										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
+										<li><a href="/service_request">Service Request</a></li>
 									<% } %>
 								  <li><a href="/about">E-Office</a></li>
 									<li><a href="/terms">Algemene voorwaarde</a></li>
@@ -99,7 +97,7 @@
 								<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
 							<% } %>
 							<% if (!username) { %>
-								<a id="loginButton" href="/login">Login</a>
+								<!-- <a id="loginButton" href="/login">Login</a> -->
 							<% } %>
 						</div>
 					</div>
@@ -219,27 +217,11 @@
 		</div>
 	</footer>
 </div>
+	<script type="text/javascript" src="/scripts/botframe.js"></script>
 	<script type="text/javascript" src="/scripts/loginbutton.js"></script>
 	<script type="text/javascript" src="/scripts/custom_menu.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function() {
-		$('#eofbot').on('load', function(){
-			var wavy = $(this).contents().find("#wavy");
-			var eofbot = $('#eofbot');
-			$(this).contents().find("#wavy").on('click', function(event) {
-				available = eofbot.contents().find(".botname span", eofbot);
-				console.log(available)
-				function toggleText() {
-					if (available[0].innerHTML === "available") {
-						available[0].innerHTML = "Chatting";
-					} else {
-						available[0].innerHTML = "available";
-					}
-				}
-				$('#eofbot').toggleClass('active');
-				toggleText();
-			});
-		});
 		// Removing _rev because its unnecesary info taking up row space
 		var dt = $("dt");
 		for (i = 0; i < dt.length; i++) {
