--- a/views/index.html
+++ b/views/index.html
@@ -87,7 +87,7 @@
 								<li><a href="/service_request">Service Request</a></li>
 							<% } %>
 							<li><a href="/about">E-Office</a></li>
-							<li><a href="/terms">Algemene voorwaarde</a></li>
+							<li><a href="/terms">Algemene voorwaarden</a></li>
 						<% } %>
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
 							<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
