--- a/views/downloads.html
+++ b/views/downloads.html
@@ -85,7 +85,7 @@
 										<li><a href="/service_request">Service Request</a></li>
 									<% } %>
 								  <li><a href="/about">E-Office</a></li>
-									<li><a href="/terms">Algemene voorwaarde</a></li>
+									<li><a href="/terms">Algemene voorwaarden</a></li>
 								<% } %>
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
 									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
@@ -126,7 +126,21 @@
 			</div>
 		<% } %>
 
+		<div class="col-12" id="downloads">
+			<h3>Downloads</h3>
+			<br>
+			<h4>Talkteam Windows</h4>
+			<ul>
+				<li><a href="#">TalkTeamInstaller_v1.exe</a></li>
+				<li><a href="#">TalkTeamInstaller_v1.5.exe</a></li>
+			</ul>
 
+			<h4>Talkteam Mac/Linux</h4>
+			<ul>
+				<li><a href="#">TalkTeamInstaller_v1.exe</a></li>
+				<li><a href="#">TalkTeamInstaller_v3.exe</a></li>
+			</ul>
+		</div>
 
 		<% if (username && admin ) { %>
 			<div class="adminPanel">
