--- a/views/logout.html
+++ b/views/logout.html
@@ -63,12 +63,8 @@
 									<li><a href="/blog">News</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
-										<li>
-											<a href="/support">Support</a>
-										</li>
-										<li>
-											<a href="/login">Login</a>
-										</li>
+										<li><a href="/support">Support</a></li>
+										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
 										<li><a href="/service_request">Service Request</a></li>
@@ -80,12 +76,14 @@
 									<li><a href="/blog">Nieuws</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
+										<li><a href="/support">Ondersteuning</a></li>
 										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
+										<li><a href="/service_request">Service Request</a></li>
 									<% } %>
 								  <li><a href="/about">E-Office</a></li>
-									<li><a href="/terms">Algemene voorwaarde</a></li>
+									<li><a href="/terms">Algemene voorwaarden</a></li>
 								<% } %>
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
 									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
@@ -95,9 +93,13 @@
 							</ul>
 						</nav>
 						<div class="login">
-								<a id="loginButton" href="/login">Login</a>
+							<% if (username) { %>
+								<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
+							<% } %>
+							<% if (!username) { %>
+								<!-- <a id="loginButton" href="/login">Login</a> -->
+							<% } %>
 						</div>
-					</div>
 				</div>
 			</div>
 		</header>
