--- a/views/terms.html
+++ b/views/terms.html
@@ -86,7 +86,7 @@
 										<li><a href="/service_request">Service Request</a></li>
 									<% } %>
 								  <li><a href="/about">E-Office</a></li>
-									<li><a href="/terms">Algemene voorwaarde</a></li>
+									<li><a href="/terms">Algemene voorwaarden</a></li>
 								<% } %>
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
 									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
@@ -118,13 +118,6 @@
 
 <section class="container main">
 	<div class="row intro">
-			<!-- <% if (typeof lang == 'undefined' || lang == 'en') { %>
-				<h2>General terms & conditions</h2>
-				<p>Register your username and password here.</p>
-			<% } else if (lang == 'nl') { %>
-				<h2>Algemene voorwaarden</h2>
-				<p>Registreer uw gebruikersnaam en wachtwoord hier.</p>
-			<% } %> -->
 
 			<% for(var i=0; i < _jsonConverter.cmsNodes.length; i++) { %>
 				<div class="col-12 <% if ( admin ) { %> cm <% } %> ">
