--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1023,7 +1023,7 @@ border-bottom:1px solid #ccc;
 	display:block;
 	margin:2em auto;
 	margin:0 auto;
-	max-width:760px;
+	/* max-width:760px; */
 	padding:1em 2em;
 	position: relative;
 }
