--- a/views/login.html
+++ b/views/login.html
@@ -122,11 +122,13 @@
 			<h2>Login</h2>
 			<br>
 			<% if (typeof lang == 'undefined' || lang == 'en') { %>
-					<span>Login here with your username and password</span>
-					<a href="auth/ibm-connections-oauth/">Login trough two factor authentication via IBM Connections platform</a>
+					<h4>Login trough two factor authentication via IBM Connections platform</h4>
+					<!-- <span>Please login here with your username and password</span> -->
+					<a class="login-button" href="auth/ibm-connections-oauth/">Authenticeer Login</a>
 				<% } else if (lang == 'nl') { %>
-					<span>U kunt hier inloggen met uw gebruikersnaam en wachtwoord</span>
-					<a href="auth/ibm-connections-oauth/">Login door middel van twee factor authenticatie van IBM Connections platform</a>
+					<h4>Login door middel van twee factor authenticatie van IBM Connections platform</h4>
+					<!-- <span>U kunt hier inloggen met uw gebruikersnaam en wachtwoord</span> -->
+					<a class="login-button" href="auth/ibm-connections-oauth/">Authenticate Login</a>
 			<% } %>
 
 			<!-- <form id="loginForm" class="loginForm shortForm" method="post">
@@ -155,7 +157,7 @@
 						<div class="toggle-password">
 							<i class="fas fa-eye field-icon"></i>
 						</div>
-						<!-- <span toggle="#password-field" class="fas fa-fw fa-eye field-icon toggle-password"></span>
+						<span toggle="#password-field" class="fas fa-fw fa-eye field-icon toggle-password"></span>
 						<span class="errorMessage"><%= errorMessage %></span>
 				</div>
 				<input type="submit" name="button" value="login">
