--- a/views/downloads.html
+++ b/views/downloads.html
@@ -118,6 +118,73 @@
 <section class="container main">
 	<div class="row intro">
 
+		<div class="col-12" id="downloads">
+			<h3>Downloads</h3>
+			<br>
+
+			<% if (username && admin ) { %>
+				<form id="downloadFile" class="shortForm" action="/post/download_files" method="post" enctype="multipart/form-data">
+					<% if (typeof lang == 'undefined' || lang == 'en') { %>
+						<header>
+							<label for="blogpost_title">Title:</label>
+							<input type="text" id="blogpost_title" name="blogpost_title"/>
+						</header>
+						<div class="body">
+							<label for="download_file" id="buttonlabel">
+								<span role="button" aria-controls="filename" tabindex="0">
+									<i class="fas fa-upload"></i><% if (typeof lang == 'undefined' || lang == 'en') { %>Choose a file..<% } else if (lang == 'nl') { %>Bestand kiezen..<% } %>
+								</span>
+							</label>
+							<input type="file" name="download_file" id="download_file" value="">
+							<label for="filename" class="hide">
+								uploaded file
+							</label>
+							<input type="text" id="filename" autocomplete="off" readonly placeholder="<% if (typeof lang == 'undefined' || lang == 'en') { %>No file selected, with this action you will overwrite the old upload(file)<% } else if (lang == 'nl') { %>Geen bestand geselecteerd , u overschrijft de vorige upload(bestand) hiermee.<% } %>">
+
+						</div>
+					<% } else if (lang == 'nl') { %>
+						<header>
+							<label for="blogpost_title">Titel (EN):</label>
+							<input type="text" id="blogpost_title" name="blogpost_title"/>
+						</header>
+						<div class="body">
+							<label for="download_file" id="buttonlabel">
+								<span role="button" aria-controls="filename" tabindex="0">
+									<i class="fas fa-upload"></i><% if (typeof lang == 'undefined' || lang == 'en') { %>Choose a file..<% } else if (lang == 'nl') { %>Bestand kiezen..<% } %>
+								</span>
+							</label>
+							<input type="file" name="download_file" id="download_file" value="">
+							<label for="filename" class="hide">
+								uploaded file
+							</label>
+							<input type="text" id="filename" autocomplete="off" readonly placeholder="<% if (typeof lang == 'undefined' || lang == 'en') { %>No file selected, with this action you will overwrite the old upload(file)<% } else if (lang == 'nl') { %>Geen bestand geselecteerd , u overschrijft de vorige upload(bestand) hiermee.<% } %>">
+
+
+						</div>
+
+					<% } %>
+					<footer>
+						<!-- <pre>Date: <%= timeStampFormat %></pre> -->
+						<input type="hidden" name="blogpost_unique_date" value="<%= uniqueTimeStamp %>"/>
+						<input type="hidden" name="blogpost_date" value="<%= timeStamp %>"/>
+						<input type="hidden" name="blogpost_date_format" value="<%= timeStampFormat %>"/>
+					</footer>
+					<input type="submit" value="<% if (typeof lang == 'undefined' || lang == 'en') { %>Send<% } else if (lang == 'nl') { %>Verzenden<% } %>">
+				</form>
+			<% } else if (username) { %>
+
+			<% } %>
+
+			<% for(var i=0; i < download_files.length; i++) { %>
+				<div class="">
+					file to download <br>
+					-------------- <br>
+					<a href="<%= download_files[i].file.path %>"><%= download_files[i].file_title %></a>
+				</div>
+			<% } %>
+
+		</div>
+
 		<% for(var i=0; i < _jsonConverter.cmsNodes.length; i++) { %>
 			<div class="col-12 <% if ( admin ) { %> cm <% } %> ">
 				<div class="cm_box">
@@ -126,21 +193,6 @@
 			</div>
 		<% } %>
 
-		<div class="col-12" id="downloads">
-			<h3>Downloads</h3>
-			<br>
-			<h4>Talkteam Windows</h4>
-			<ul>
-				<li><a href="#">TalkTeamInstaller_v1.exe</a></li>
-				<li><a href="#">TalkTeamInstaller_v1.5.exe</a></li>
-			</ul>
-
-			<h4>Talkteam Mac/Linux</h4>
-			<ul>
-				<li><a href="#">TalkTeamInstaller_v1.exe</a></li>
-				<li><a href="#">TalkTeamInstaller_v3.exe</a></li>
-			</ul>
-		</div>
 
 		<% if (username && admin ) { %>
 			<div class="adminPanel">
@@ -179,6 +231,60 @@
 	</footer>
 </div>
 
+<script type="text/javascript">
+$(document).ready(function() {
+
+	// TOGGLE EDIT FORM
+	var editButton = $('.blog_edit_button');
+	editButton.click(function() {
+		postForm = $(this).siblings('.blog_post_form');
+		currentForm = $(this).siblings('.currentForm');
+		postForm.toggleClass('closed');
+		currentForm.toggleClass('closed');
+	});
+
+	//EDIT POST - FORM
+	$('.extra span[role=button]').on('keypress keyup click', function(e) {
+		var currentID = '#' + $(this).parent().siblings('input').attr('id');
+		console.log(currentID)
+		// console.log($(this).parent().siblings('.blogpost_file_edit'))
+		// if(e.which === 32 || e.which === 13){
+		// 	e.preventDefault();
+		// 	$(this).parent().siblings('.blogpost_file_edit').click();
+		// }
+		$(currentID).change(function(e) {
+			var filename_edit = $(this).val().split('\\').pop();
+			var copyLabel = $(this).siblings('.filename_edit');
+			$(copyLabel[0]).val(filename_edit);
+			$(copyLabel[0]).attr('placeholder', filename_edit);
+			$(copyLabel[0]).focus();
+		});
+	});
+
+//UPLOAD FORM - ORIGINAL
+// $('#buttonlabel span[role=button]').bind('keypress keyup', function(e) {
+// 	console.log('click')
+//   if(e.which === 32 || e.which === 13){
+//     e.preventDefault();
+//     $('#blogpost_file').click();
+//   }
+// });
+// return chosen filename to additional input
+$('#download_file').change(function(e) {
+	var filename = $('#download_file').val().split('\\').pop();
+	console.log(filename)
+	$('#filename').val(filename);
+	$('#filename').attr('placeholder', filename);
+	$('#filename').focus();
+});
+
+// if checkbox checked then show div > and post values for uploadfile
+$('input[type="checkbox"]').change(function() {
+	// console.log($(this))
+	$(this).siblings('.extra').toggle();
+});
+});
+</script>
 <script type="text/javascript" src="/scripts/botframe.js"></script>
 <script src="./lib/domJSON.js"></script>
 <!-- <script type="text/javascript" src="/scripts/admin_cm.js"></script> -->
